results table color, spacing changed. slightly altered spacing and margins of RestaurantCard. Added Winner header on results page, need to fix gap between header and restaurant card:

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,6 +38,10 @@ h1 {
   box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
 
+.scale-table {
+  transform: scale(.8);
+}
+
 /* @layer base {
   button.button {
     @apply text-[#D9EDBF] text-base font-extrabold;
